@@ -433,7 +433,7 @@
 	<varlistentry>
 		<term><command><option>TEXT</option></command></term>
 		<listitem>
-			After this begins text to be formatted on screen
+			After this begins text to be formatted on screen.  Backslash (\) escapes newlines in the text section.  This can be useful for cleaning up config files where conky is used to pipe input to dzen2.
 			<para></para></listitem>
 	</varlistentry>
 
